:lipstick::bug: style harmonized & bug fixed
- An unessesary horizontal scrollbar was removed

- Footer & header styles matched & their content is now centered

--- a/assets/css/love_calculator.css
+++ b/assets/css/love_calculator.css
@@ -7,15 +7,15 @@
     box-sizing                      : border-box;
 }
 
-html, body{
+html, body, p{
     margin                          : 0;
     padding                         : 0;
-    height                          :100%;
+    height                          : 100%;
     font-size                       : 1.5rem;
 }
 
 body{
-    background-color                : #ffc0cb52; 
+    background-color                : #ffc0cb69; 
 }
 
 img{
@@ -23,13 +23,28 @@ img{
     height                          : auto;
 }
 
+a{
+    text-decoration                 : none;
+    color                           : rgba(237,158,194,1);;
+}
+
+a:hover{
+    text-decoration                 : none;
+    color                           : moccasin;
+}
+
 .container{
     max-width                       : 1200px;
+}
+
+.container-md{
+    max-width                       : 850px;
 }
 
 .hidden{
     display                         : none;
 }
+
 
 
 /********************************************
@@ -38,29 +53,20 @@ img{
 
 /*font-family: 'Archivo', sans-serif;*/
 
-h1
-{
+h1{
     font-family                     : 'Archivo', sans-serif;
     font-size                       : 4rem; 
     font-style                      : italic;
     font-weight                     : 700;
-    color                           : honeydew;
+    color                           : mintcream;
 }
 
-p, figcaption
-{
+h3, p, figcaption{
     font-family                     : 'Archivo', sans-serif;
-    font-size                       : 1.5rem;
+    font-size                       : 1.2rem;
 }
 
-
-footer p
-{
-    font-size                       : 2rem;
-}
-
-button
-{
+button{
     font-weight                     : 200;
     font-family                     : cursive, serif;
 }
@@ -69,49 +75,26 @@ button
 ******************* HEADER ******************
 *********************************************/
 
-header
-{
-    /* background                   : url("../img/camelia-1.jpg"); */
-    background-position             : center;
-    width                           : 100%;
-    height                          : 35%;
+header{
+    margin-bottom                   : 2.8rem;
 }
 
-
-header h1
-{
-
-    padding-top                     : 4rem; 
-    margin-left                     : 3rem;
+header div:nth-of-type(1){
+    text-align                      : center;
 }
 
+header h3{
+    background-color                : mintcream;
+    font-size                       : 1.2rem;
+}
 
 /********************************************
 ******************* MAIN ********************
 *********************************************/
 
-/**
-** SECTION 1 
-**/
+/*** SECTION 1 ***/
 
-#presentation
-{
-    margin-top                      : 2rem;
-    text-align                      : center;
-}
-
-#presentation img
-{
-    width                           : 22%;
-    border-radius                   : 50px 55%;
-    margin-bottom                   : 1.5rem;
-}
-
-/**
-** SECTION 2
-**/
-
-/**Form**/
+/** Form **/
 
 #lovers-form{
     text-align                      : center;
@@ -145,11 +128,9 @@ form div:only-child{
     justify-content                 : space-evenly;
 }
 
-/**
-** SECTION 3 
-**/ 
+/*** SECTION 2 ***/
 
-section:nth-of-type(3){
+section:nth-of-type(2){
     margin-top                      : 30px;
 }
 
@@ -160,15 +141,15 @@ section:nth-of-type(3){
     justify-content                 : center;
 }
 
-#compatibility
-{
+#compatibility{
     margin-bottom                   : 2.5rem; 
     margin-right                    : 13px;
     position                        : relative;
     z-index                         : 1;
     transform                       : rotate(-45deg);
     color                           : honeydew;
-    text-align                      : center;     
+    text-align                      : center;  
+    font-size                       : 1.5rem;   
 }
 
 .love-btn{
@@ -202,8 +183,7 @@ section:nth-of-type(3){
 
 
 .heart-shape::before,
-.heart-shape::after
-{
+.heart-shape::after{
   position                          : absolute;
   width                             : 4rem;
   height                            : 4rem;
@@ -212,15 +192,13 @@ section:nth-of-type(3){
   background-color                  : rgba(237,158,194, 1);
 }
 
-.heart-shape::before
-{
+.heart-shape::before{
   bottom                            : 0px;
   left                              : -2rem;
   background                        : linear-gradient(85deg, rgba(241,216,227,1) 8%, rgba(237,158,194,1) 35%);
 }
 
-.heart-shape::after
-{
+.heart-shape::after{
   top                               : -2rem;
   right                             : 0px;
   background                        : linear-gradient(170deg, rgba(241,216,227,1) 8%, rgba(237,158,194,1) 35%);
@@ -233,7 +211,8 @@ figure img{
 }
 
 figcaption{
-    font-size: 1rem;
+    font-size                       : 1rem;
+    background-color                : rgba(245, 255, 250, 0.393);
 }
 
 
@@ -241,24 +220,11 @@ figcaption{
 ******************* FOOTER ******************
 *********************************************/
 
-footer
-{
-    margin-top: 5rem; 
-    background-position             : center;
-    width                           : 100%;
-    height                          : auto;
-    padding-bottom                  : 2rem;
-    padding-top                     : 2rem;
+footer{
+    text-align                      : center;
+    letter-spacing                  : 0.2rem;
 }
 
-footer p
-{
-    color                           : honeydew;
-    margin-left                     : 2rem;
-    padding-left: 1rem;
-    width                           : 43%;
-    background-color                : rgba(0, 0, 0, 0.4);
-}
 
 
 
